<resources>
    <string name="app_name">Sign For You</string>
    <string name="sign_for_you">Sign For You</string>
    <string name="txt_info_splash">Get new experience in using sign language, its Free !!</string>
    <string name="get_started">Get Started</string>
    <string name="our_features">Our Features</string>
    <string name="title_activity_translate">TranslateActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="translation">Translation</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera and storage permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">
        <![CDATA[


            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.


        ]]>
    </string>
    <string name="translate">Translate</string>
    <string name="translate_info">Lets go to our core feature, the translator. You can use the feature by click the icon above.</string>
    <string name="camera_box">Camera Box</string>
    <string name="translation_box">Translation Box</string>
    <string name="translate_page_info">We’ll move to other page, as you can see we have camera view and translation box. Lets go one by one.</string>
    <string name="camera_box_tag"># Camera Box</string>
    <string name="camera_box_info">This box will require permission to use your camera. In this box you can translate sign language by moving your camera into someone\'s hand.</string>
    <string name="translate_box_info">The translation result from your camera will be place in here. We have two button in the bottom of the box</string>
    <string name="translation_box_tag"># Translation Box</string>
    <string name="back_btn_info"><b>Back Button</b>, this button will take you to the home page.</string>
    <string name="reload_btn_info"><b>Reload Button</b>, use it if you want to re-translate the translation. It will erase the translation on the translation box</string>
    <string name="how_to_use">HOW TO USE</string>
    <string name="example">Example</string>
    <string name="steps">
        <br><b>Step 1</b>\n</br>
        <br>On the top line, the application will detect the letters in realtime\n</br>
        <br><b>Step 2</b>\n</br>
        <br>Wait until the letters that are detected doesn\'t change\n</br>
        <br><b>Step 3</b>\n</br>
        <br>Press the checklist button to store letters\n</br>
    </string>
    <string name="accept_btn_info"><b>Accept Button</b>, click this button if the word appears in the translation box does not change repeteadly</string>
</resources>