<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp"
    tools:context=".ui.help.HelpActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="30dp"
            >
            <TextView
                android:id="@+id/tv_translate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/translate"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_marginTop="25dp"
                />

            <ImageView
                android:id="@+id/iv_translate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_translate"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="10dp"
                android:src="@drawable/feature_translation"
                />

            <TextView
                android:id="@+id/tv_translate_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/iv_translate"
                android:text="@string/translate_info"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_regular"
                />

            <ImageView
                android:id="@+id/iv_translate_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_translate_info"
                app:layout_constraintLeft_toLeftOf="parent"
                android:src="@drawable/translate_page"
                android:layout_marginTop="10dp"
                />

            <ImageView
                android:id="@+id/arrow_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/iv_translate_page"
                app:layout_constraintBottom_toTopOf="@id/arrow_2"
                app:layout_constraintLeft_toRightOf="@id/iv_translate_page"
                android:src="@drawable/ic_arrow"
                android:layout_marginStart="10dp"
                />

            <TextView
                android:id="@+id/tv_arrow_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/arrow_1"
                app:layout_constraintTop_toTopOf="@id/arrow_1"
                app:layout_constraintBottom_toBottomOf="@id/arrow_1"
                android:text="@string/camera_box"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_regular"
                android:layout_marginStart="10dp"
                />


            <ImageView
                android:id="@+id/arrow_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/arrow_1"
                app:layout_constraintBottom_toBottomOf="@id/iv_translate_page"
                app:layout_constraintLeft_toRightOf="@id/iv_translate_page"
                android:src="@drawable/ic_arrow"
                android:layout_marginStart="10dp"

                />
            <TextView
                android:id="@+id/tv_arrow_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/arrow_2"
                app:layout_constraintTop_toTopOf="@id/arrow_2"
                app:layout_constraintBottom_toBottomOf="@id/arrow_2"
                android:text="@string/translation_box"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_regular"
                android:layout_marginStart="10dp"
                />

            <TextView
                android:id="@+id/tv_translate_page_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/iv_translate_page"
                android:text="@string/translate_page_info"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_regular"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/tv_camera_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_translate_page_info"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/camera_box_tag"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_medium"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:id="@+id/tv_camera_box_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_camera_box"
                android:text="@string/camera_box_info"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_regular"
                />
            <TextView
                android:id="@+id/tv_translate_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_camera_box_info"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/translation_box_tag"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_medium"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:id="@+id/tv_translate_box_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_translate_box"
                android:text="@string/translate_box_info"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_regular"
                />

            <ImageView
                android:id="@+id/iv_back_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/bg_circle"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintTop_toBottomOf="@id/tv_translate_box_info"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="15dp"
                android:paddingStart="15dp"
                />

            <TextView
                android:id="@+id/tv_back_btn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/iv_back_btn"
                app:layout_constraintLeft_toRightOf="@id/iv_back_btn"
                android:text="@string/back_btn_info"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_regular"
                android:layout_marginStart="15dp"
                />

            <ImageView
                android:id="@+id/iv_accept_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/bg_circle"
                android:src="@drawable/ic_check"
                app:layout_constraintTop_toBottomOf="@id/tv_back_btn"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="15dp"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/tv_accept_btn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/iv_accept_btn"
                app:layout_constraintLeft_toRightOf="@id/iv_accept_btn"
                android:text="@string/accept_btn_info"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_regular"
                android:layout_marginStart="15dp"
                />

            <ImageView
                android:id="@+id/iv_reload_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/bg_circle"
                android:src="@drawable/ic_refresh"
                app:layout_constraintTop_toBottomOf="@id/tv_accept_btn"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="15dp"
                android:padding="5dp"
                />

            <TextView
                android:id="@+id/tv_reload_btn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/iv_reload_btn"
                app:layout_constraintLeft_toRightOf="@id/iv_reload_btn"
                android:text="@string/reload_btn_info"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_regular"
                android:layout_marginStart="15dp"
                />

            <TextView
                android:id="@+id/tv_how_to_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_reload_btn"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/how_to_use"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_medium"
                android:layout_marginVertical="20dp"
                />

            <TextView
                android:id="@+id/tv_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_how_to_use"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/steps"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_regular"
                android:layout_marginTop="10dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>