<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="45dp"
        android:text="@string/sign_for_you"
        android:textSize="30sp"
        android:textColor="@color/txt_splash"
        android:fontFamily="@font/montserrat_regular"
        android:textFontWeight="600"
        />

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_title"
        android:layout_marginTop="30dp"
        android:src="@drawable/splash"
        />

    <TextView
        android:id="@+id/txt_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/img"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="60dp"
        android:text="@string/txt_info_splash"
        android:textSize="24sp"
        android:textColor="@color/txt_splash"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_started"
        android:layout_width="150dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/txt_info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/get_started"
        android:textColor="@android:color/white"
        android:background="@drawable/bg_btn"
        />

</androidx.constraintlayout.widget.ConstraintLayout>